src/test/ui/issue-31221.stderr
error: unreachable pattern
  --> $DIR/issue-31221.rs:28:9: in fn main
   |
LL |         Var3 => (),
   |         ---- matches any value
LL |         Var2 => (),
   |         ^^^^ unreachable pattern
   |
note: lint level defined here
  --> $DIR/issue-31221.rs:14:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/issue-31221.rs:34:9: in fn main
   |
LL |         &Var3 => (),
   |         ----- matches any value
LL |         &Var2 => (),
   |         ^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/issue-31221.rs:41:9: in fn main
   |
LL |         (c, d) => (),
   |         ------ matches any value
LL |         anything => ()
   |         ^^^^^^^^ unreachable pattern

error: aborting due to 3 previous errors

